--- a/css/mobile.css
+++ b/css/mobile.css
@@ -23,6 +23,7 @@
 #main-header .logo {
     font-family: 'Gowun Batang', serif;
     text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.7);
+    white-space: nowrap;
 }
 
 #main-header nav #menu {
@@ -201,6 +202,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 1rem;
     align-items: center;
     text-align: left;
     padding: 20vh 2vw;
@@ -222,11 +224,11 @@
 }
 
 #About .first-floor .intro h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 #About .first-floor .intro p {
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 /* 2층 */
@@ -254,6 +256,9 @@
     gap: 1vw;
     align-items: center;
 }
+.second-floor .container .skill-title p {
+    display: none;
+}
 
 .second-floor .container .skill {
     width: 100%;
@@ -268,7 +273,7 @@
     width: 100%;
     height: 25vh;
     border-radius: 15px;
-    padding: 20px;
+    padding: 10px;
     background-color: #fff;
     display: flex;
 }
@@ -278,7 +283,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .second-floor .container .skill li .skill-icon {
@@ -296,11 +301,11 @@
 
 .second-floor .container .skill li .skill-icon .progress {
     position: relative;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     margin-top: 15px;
     text-align: center;
-    line-height: 50px;
+    line-height: 30px;
     border-radius: 50%;
     background-color: #fff;
 }
@@ -318,7 +323,7 @@
 }
 .second-floor .container .skill li .skill-name {
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin-top: 20px;
     position: relative;
 
@@ -338,7 +343,7 @@
 .second-floor .container .skill li .skill-info {
     width: 100%;
     height: 35%;
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin-top: 20px;
     position: relative;
 }
@@ -391,7 +396,7 @@
     height: 20%;
     padding: 0 15vw;
     padding-top: 100px;
-    font-size: 2rem;
+    font-size: 1rem;
     display: flex;
     white-space: nowrap;
     justify-content: space-between;
@@ -484,7 +489,7 @@
 
 #Work .work-contents .container .row {
     width: 80vw;
-    height: 50vh;
+    height: 40vh;
 }
 
 
@@ -517,9 +522,12 @@
 }
 
 #contents-wrapper article .left-side .thumbnail {
-    width: 70%;
+    width: 90%;
     height: 100%;
     /* outline: 1px solid red; */
+    display: flex;
+    align-items: center;
+    margin-bottom: 10vh;
 }
 
 #contents-wrapper article .left-side .thumbnail img {
@@ -529,7 +537,7 @@
 }
 .mobile-site #contents-wrapper article .left-side .thumbnail img {
     width: auto;
-    height: 90%;
+    height: 80%;
 }
 
 #contents-wrapper article .right-side {
@@ -548,23 +556,22 @@
 }
 
 #contents-wrapper article .right-side .work-info span {
-    font-size: 1.5rem;
+    font-size: .8rem;
 }
 
 #contents-wrapper article .right-side .work-info span h2 {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-weight: bolder;
     margin-bottom: 10px;
 }
 
 #contents-wrapper article .right-side .work-info span p {
-    white-space: nowrap;
-    margin-left: 10px;
+    white-space: normal;
 }
 
 #contents-wrapper article .right-side .detail-btn-group {
     width: 100%;
-    padding: 10px 20px;
+    padding: 20px 0;
     display: flex;
     justify-content: space-between;
 }
@@ -574,6 +581,7 @@
     height: 4vh;
     background-color: var(--main-color);
     border-radius: 10px;
+    font-size: 1rem;
 }
 #readme a {
     width: 100%;
@@ -587,6 +595,7 @@
     height: 4vh;
     background-color: var(--main-color);
     border-radius: 10px;
+    font-size: 1rem;
 }
 #gotogit a {
     width: 100%;
@@ -678,10 +687,11 @@
     bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 3rem;
+    font-size: 2rem;
     display: flex;
-    gap: 5rem;
+    gap: 4rem;
     text-align: center;
+    white-space: nowrap;
 }
 
 #Contact .contact-way a {
