--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,14 @@ html {
     line-height: 1.285;
     scroll-behavior: smooth;
     font-family: 'Gowun Batang', serif;
+    cursor: none;
 }
 ::-webkit-scrollbar{
     display: none;
 }
 
 body {
-    cursor: none !important;
+    
     background-color: #fff;
 }
 
