--- a/css/pc.css
+++ b/css/pc.css
@@ -128,6 +128,7 @@
     height: 100vh;
 
     background-image: url('../images/profile.png');
+    background-repeat: no-repeat;
     background-size: contain;
     background-attachment: fixed;
     
