--- a/css/pc.css
+++ b/css/pc.css
@@ -153,16 +153,18 @@
 
 .eyes {
     position: absolute;
-    width: 8rem;
-    height: 4rem;
-    top: 25%;
-    left: 57%;
+    /* width: 8rem; */
+    /* height: 4rem; */
+    width: 4vw;
+    height: 2vw;
+    top: 15vw;
+    left: 26.5vw;
     display: flex;
-    transform: rotate(7deg);
+    transform: rotate(5deg);
 }
 .eyes .on {
-    width: 3rem;
-    height: 3rem;
+    width: 2vw;
+    height: 2vw;
     border-radius: 50%;
     border: 2px solid black;
     background-color: #fff;
@@ -195,6 +197,7 @@
     position: relative;
     padding-bottom: 40px;
     padding-top: 20px;
+    z-index: 1;
 }
 
 #About .first-floor .intro section .section-highlighter {
@@ -215,6 +218,9 @@
 #About .first-floor .intro .about-title {
     position: absolute;
     width: 50vw;
+    height: auto;
+    background-color: #fff;
+    box-shadow: 0px 0px 1000px 100px #fff;
     left: -100%;
     bottom: 17vh;
     font-size: 3rem;
