--- a/css/pc.css
+++ b/css/pc.css
@@ -130,25 +130,22 @@
 }
 .profile-clip img {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: 50%;
+    right: 50%;
+    transform: translate(50%, 50%);
     height: 100%;
 }
 
 .eyes {
     position: absolute;
-    /* width: 8rem; */
-    /* height: 4rem; */
-    width: 4vw;
-    height: 2vw;
-    top: 15vw;
-    left: 26.5vw;
+    bottom: 71%;
+    right: 30%;
     display: flex;
     transform: rotate(5deg);
 }
 .eyes .on {
-    width: 2vw;
-    height: 2vw;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
     border: 2px solid black;
     background-color: #fff;
@@ -713,11 +710,38 @@
 
 
 
-
+/* 기타 섹션 */
 .etc-site #contents-wrapper article{
+    position: relative;
     padding: 0;
 }
 .etc-site #contents-wrapper article iframe {
-    
-    transform: scale(1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.etc-site #contents-wrapper article .detail {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+    font-size: 5rem;
+}
+.etc-site #contents-wrapper article .detail a {
+    width: 70%;
+    height: auto;
+}
+.etc-site #contents-wrapper article:hover .detail {
+    background-color: rgba(0, 0, 0, 0.3);
+    opacity: 1;
+
 }
