--- a/css/pc.css
+++ b/css/pc.css
@@ -144,8 +144,8 @@
     transform: rotate(5deg);
 }
 .eyes .on {
-    width: 3rem;
-    height: 3rem;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     border: 2px solid black;
     background-color: #fff;
