--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,14 @@ button {
 
     }
 }
+#contents-wrapper .notyet {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 3rem;
+    padding-bottom: 5vh;
+}
+#contents-wrapper .notyet img {
+    width: 20%;
+}
